<resources>
    <string name="app_name">isd</string>
    <string name="Cairo_Festival_City">Cairo Festival City</string>
    <string name="Search">Search</string>
    <string name="ServicesCategory">Services Category</string>
    <string name="UserName"> User Name</string>
    <string name="password">password</string>
    <string name="login">log in</string>
    <string name="signup">sign up</string>
    <string name="confirmpassword">confirm password</string>
    <string name="fullname">full name</string>
    <string name="email">email</string>
    <string name="Registry">Register</string>
    <string name="map">GMap</string>
    <string name="AlreadregistryLoginMe">Already registered! Login</string>
    <string name="successfullylogin">successfully login</string>
    <string name="nonetworkconection">no network connection</string>
    <string name="ErrorConnectionfromWebHosting">"Bad Connection Host error"</string>
    <string name="missingpasswordorusername">missing password or username</string>
    <string name="usernameorpasswordnotcorrect">username or password incorrect</string>
    <string name="SuccessfullyRegistry">Successfully Registered</string>
    <string name="thisaccountisexist">this account is exist</string>
    <string name="emailmustbe14charmini">email must be 14 char mini</string>
    <string name="unvaildemail">invalid email</string>
    <string name="somefieldisempty">some field is empty plz fill it</string>
    <string name="confirmpasswordfield">confirm password field error rewrite it</string>
    <string name="ConnectionerrorfromWebHosting">Connection error from Web Hosting</string>
    <string name="Searchisempty">Search is empty</string>
    <string name="incorrectinputs">username or password incorrect</string>
    <string name="NoAddressreturned"> No Address returned!</string>
    <string name="CantgetAddress">Can not get Address</string>
    <string name="Address">Address:\n</string>
    <string name="noResultorconlack">No Result or Connection Lack</string>
    <string name="phone"> Phone : </string>
    <string name="description">Description :</string>
    <string name="RememberMe"> Remember Me </string>
    <string name="nomapapp"> there is no map app in this device </string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="NoResult">  No Result </string>
    <string name="providname">Provider :</string>
    <string name="servicename">Name :</string>
    <string name="title_activity_maps">Map</string>
    <string name="doubleclicktoexit">double click to exit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="logouts">log out</string>
    <string name="kepmelogin">Keep me logged in</string>
    <string name="pasowrdlenthg">password must be more then 6 char</string>
    <string name="done">done</string>
    <string name="fail">fail try again</string>
    <string name="start">ابدء</string>
    <string name="city">city</string>
    <string name="name">name</string>
    <string name="phoneser">phone</string>
    <string name="notficationtest">notification check</string>
    <string name="edit">edit</string>
    <string name="Share">Share</string>
    <string name="App">App</string>
    <string name="Services">Services</string>
    <string name="AddService">Add Service</string>
    <string name="MyService">My Service</string>
    <string name="delete">delete</string>
    <string name="writecomment">Write comment...</string>
    <string name="Comments">Comments</string>
    <string name="Maplocation">Map location</string>
    <string name="descriptionserv">description</string>
    <string name="saveedit">save edit</string>
    <string name="comnt">Comment</string>
    <string name="facbok">facebook link</string>
    <string name="webistss">webiste link</string>
    <string name="comntnoo">no comments for this service</string>
    <string name="updatesucess">service updated succesfully</string>
    <string name="pleasfill">please fill all empty fields</string>
    <string name="about">نبذة عن التطبيق  \n هذا التطبيق يتيح لك الوصول الى اقرب مراكز البيع والخدمات عن طريق البحث باستخدام خرائط جوجل او البيانات الخاصة بموقعنا</string>
    <string name="address">address</string>
</resources>
