<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarsaxzsss"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:titleTextColor="#52c7b8"
        android:background="#00675b"
        android:elevation="8dp"

        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        />

<ScrollView

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cc334455"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:padding="8dp"

            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:background="@drawable/srvpro"
            >
            <ImageView
                android:id="@+id/srvphotosss"
                android:layout_width="159dp"
                android:layout_height="159dp"
                android:scaleType="centerCrop"
                tools:src="@drawable/empty" />
            <Button
                android:id="@+id/saveeditss"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="40dp"
                android:padding="10dp"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/saveedit"
                />

        </LinearLayout>

        <TextView
            android:textColor="#ffffff "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="16dp"
            android:text="@string/name"
            android:textSize="25sp"
            />
<EditText
    android:id="@+id/namesrvaa"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginBottom="16dp"
    android:background="@drawable/cato"
    android:hint="@string/name"
    tools:text="dsaaaaaaaaaaaaaadssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss"
    android:maxLength="40"
    android:textSize="15sp"
    />
        <TextView
            android:textColor="#ffffff "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="16dp"
            android:text="@string/descriptionserv"
            android:textSize="25sp"
            />
        <EditText
            android:id="@+id/descsrvaa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:background="@drawable/cato"
            android:layout_marginBottom="16dp"
            android:hint="@string/descriptionserv"
            tools:text="dsaaaaaaaaaaaaaadssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss"
            android:maxLength="40"
            android:textSize="15sp"
            />
        <TextView
            android:textColor="#ffffff "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="16dp"
            android:text="@string/address"
            android:textSize="25sp"
            />
        <EditText
            android:id="@+id/addresssrvaa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/cato"
            android:hint="@string/address"
            tools:text="dsaaaaaaaaaaaaaadssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss"
            android:maxLength="40"
            android:textSize="15sp"
            />


        <TextView
            android:textColor="#ffffff "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="16dp"
            android:text="@string/facbok"
            android:textSize="25sp"
            />
        <EditText
            android:id="@+id/FacebookLinks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/cato"
            android:hint="@string/facbok"
            tools:text="dsaaaaaaaaaaaaaadssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss"
            android:maxLength="40"
            android:textSize="15sp"
            />
        <TextView
            android:textColor="#ffffff "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="16dp"
            android:text="@string/webistss"
            android:textSize="25sp"
            />
        <EditText
            android:id="@+id/web"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/cato"
            android:hint="@string/webistss"
            tools:text="Webiste Link"
            android:maxLength="40"
            android:textSize="15sp"
            />
        <TextView
            android:textColor="#ffffff "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="16dp"
            android:text="@string/phoneser"
            android:textSize="25sp"
            />
        <EditText
            android:id="@+id/phoneesrvaa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/cato"
            android:hint="@string/phoneser"
            tools:text="dsaaaaaaaaaaaaaadssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss"
            android:maxLength="40"
            android:textSize="15sp"
            />
    </LinearLayout>
</ScrollView>
</LinearLayout>